added the possibility to define a color for each category group

--- a/translations/messages+intl-icu.de.xlf
+++ b/translations/messages+intl-icu.de.xlf
@@ -461,6 +461,10 @@
         <source>Categorygroups</source>
         <target>Kategoriegruppen</target>
       </trans-unit>
+      <trans-unit id="a3MZGgp" resname="Color">
+        <source>Color</source>
+        <target>Farbe</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
